# nearly-public

./: README.md
nearly-android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
nearly-android/app/: .gitignore  build.gradle
nearly-android/app/src/main/cpp/: CMakeLists.txt  GlErrorHandler.cpp  GlErrorHandler.h  Globals.h  MicroEngine.cpp  Renderer2D.cpp  Renderer2D.h  ShaderHandler.cpp  ShaderHandler.h
nearly-android/gradle/wrapper/: gradle-wrapper.properties
nearly-signalr-server/: .gitignore  Pigeon.sln
nearly-signalr-server/DAL/: AppDbContext.cs  DAL.csproj
nearly-signalr-server/DAL/Migrations/: 20200525164837_InitialDbMigration.Designer.cs  20200525164837_InitialDbMigration.cs  20200525191517_UrlAndEmailAndStatusDbMigration.Designer.cs  20200525191517_UrlAndEmailAndStatusDbMigration.cs  20200722205310_withAppId.Designer.cs  20200722205310_withAppId.cs  20200722205731_withAppIdNull.Designer.cs  20200722205731_withAppIdNull.cs  20200804110917_InitialCreate.Designer.cs  20200804110917_InitialCreate.cs  AppDbContextModelSnapshot.cs
nearly-signalr-server/Domain/: Domain.csproj  Message.cs  StatusIndicator.cs  User.cs  UserRelationship.cs  UserRelationshipStatus.cs
nearly-signalr-server/NearlyWebApp/: NearlyWebApp.csproj  Program.cs  Startup.cs  appsettings.json
nearly-signalr-server/NearlyWebApp/Extensions/: HttpContextExtensions.cs  UserRelationshipExtensions.cs
nearly-signalr-server/Repository/: Repository.csproj  UserRepository.cs
nearly-spring-api/: .gitlab-ci.yml  README.md  build.gradle  settings.gradle
(+281 files in other folders)
